cmake_minimum_required(VERSION 3.14)

project(tests)

#GoogleTest requires at least C++ 14
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

FetchContent_Declare(googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
FetchContent_MakeAvailable(googletest)

enable_testing()

link_directories(./../)

#Граф
add_executable(test_search
  test1.cc
  ../ssearch.cc ../ssearch.h
)

target_link_libraries(test_search GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(test_search)
